--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
         <h1>This Is <span class="no-break">John Doe</span></h1>
         <p>Vestibulum porttitor ut purus id molestie. 
           Proin molestie porta diam id suscipit. 
-          Quisque quis ipsum commodo, aliquet ligula eget, cursus orci. 
+          Quisque quis ipsum commodo, aliquet ligula eget, ae cursus orci. 
           Donec maximus lacus non condimentum lacinia. Proin dictum arcu sed tellus mattis facilisis. 
           Curabitur hendrerit quis magna in pretium. Duis malesuada lacus sed volutpat viverra.</p>
       </div>
