--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
           Donec maximus lacus non condimentum lacinia. Proin dictum arcu sed tellus mattis facilisis. 
           Curabitur hendrerit quis magna in pretium. Duis malesuada lacus sed volutpat viverra.</p>
       </div>
+      <span></span>
       <button>See the Goods</button>
       <div></div>
     </main>
