update on the social icons with links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,19 @@
 <div class="container">
   <main class="main-content">
+    <div class="content">
       <div class="main-copy">
         <h1>This Is <span class="no-break">John Doe</span></h1>
-        <p>Vestibulum porttitor ut purus id molestie. 
-          Proin molestie porta diam id suscipit. 
-          Quisque quis ipsum commodo, aliquet ligula eget, ae cursus orci. 
-          Donec maximus lacus non condimentum lacinia. Proin dictum arcu sed tellus mattis facilisis. 
-          Curabitur hendrerit quis magna in pretium. Duis malesuada lacus sed volutpat viverra.</p>
+        <p>I am a product designer and developer focused on creating digital 
+          and design solutions for people and brands. I'm an advocate for user 
+          testing and proper user experience, as both are equally important to 
+          making better products.</p>  
+          <button>See the Goods</button>
+        </div>
+        <div class="icon">
+          <a class="icon-twitter" href="https://twitter.com/JamesDRountree" target="_blank"><img src="./assets/Twitter.svg"/></a>
+          <a class="icon-linkedin" href="https://www.linkedin.com/in/james-rountree/" target="_blank"><img src="./assets/LinkedIn.svg"/></a>
+          <a class="icon-gmail" href="mailto:james.d.rountree@gmail.com"> <img src="./assets/Gmail.svg"/></a>
+        </div>
       </div>
-      
-      <button>See the Goods</button>
-      <div></div>
-    </main>
+      </main>
 </div>
