--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 html {
-    
+
 }
 
 
@@ -10,4 +10,7 @@ body {
     font-family: 'lato', ;
     margin: 0;
     min-width: 320px !important;
+    min-height: 560px !important;
+    -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
