update added pdf

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,11 @@
   <main class="main-content">
     <div class="content">
       <div class="main-copy">
-        <h1>Hi! I'm<span class="no-break">Jimbo Rountree</span></h1>
+        <h1>Hi! I'm <span class="no-break">Jimbo Rountree</span></h1>
         <p>I am a product designer and developer focused on creating digital 
           and design solutions for people and brands. I'm an advocate for user 
           testing and proper user experience.</p>  
-          <button>See my Work</button>
+          <a class="button" href="./assets/JamesRountreePortfolio.pdf" target="_blank">See My Work</a>
         </div>
         <div class="icon">
           <a class="icon-linkedin" href="https://www.linkedin.com/in/james-rountree/" target="_blank"><img src="./assets/LinkedIn.svg"/></a>
