--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -41,7 +41,7 @@ $secondary: #384001;
 
 h1 {
     font-size: 76px;
-    font-family: 'Playfair Display';
+    font-family: 'playfair-display';
     letter-spacing: 1.5px;
     line-height: 76px;
     margin: 0;
