update the font weight of the button

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -73,6 +73,8 @@ p {
     color: white;
     cursor: pointer;
     display: flex;
+    font-family: 'lato';
+    font-weight: bold;
     justify-content: center;
     align-items: center;
     height:48px;
