update to the PDF link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
           and design solutions for people and brands. I'm an advocate for user 
           testing and proper user experience.</p>  
           <!-- <a class="button" href="./assets/PreviewCaseStudies.pdf" target="_blank">Preview My Work</a> -->
-          <!-- <a class="button-secondary" href="https://www.dropbox.com/s/r4p8w124jf9n0d5/JamesRountreeCaseStudies.pdf?dl=0" target="_blank">See My Work</a> -->
+          <a class="button-secondary" href="https://www.dropbox.com/s/r4p8w124jf9n0d5/JamesRountreeCaseStudies.pdf?dl=0" target="_blank">See My Work</a>
 
         </div>
         <div class="icon">
